--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test:e2e": "playwright test",
     "lint": "eslint",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
@@ -18,6 +19,7 @@
     "@prisma/client": "^6.16.2",
     "@types/bcrypt": "^6.0.0",
     "@types/recharts": "^1.8.29",
+    "@types/ws": "^8.18.1",
     "bcrypt": "^6.0.0",
     "chart.js": "^4.5.0",
     "next": "15.5.3",
@@ -25,11 +27,17 @@
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
-    "recharts": "^3.2.1"
+    "recharts": "^3.2.1",
+    "ws": "^8.18.3"
+  },
+  "optionalDependencies": {
+    "sharp": "^0.32.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.56.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.19",
     "@types/react": "^19",
