--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "@headlessui/react": "^2.2.9",
     "@prisma/client": "^6.16.2",
     "@types/bcrypt": "^6.0.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/next-auth": "^3.13.0",
     "@types/recharts": "^1.8.29",
     "@types/ws": "^8.18.1",
     "bcrypt": "^6.0.0",
-    "chart.js": "^4.5.0",
+    "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.1",
     "next": "15.5.3",
+    "next-auth": "^4.24.11",
     "prisma": "^6.16.2",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
