--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.1",
+    "lucide-react": "^0.548.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "prisma": "^6.16.2",
