Update production environment with essential variables

--- a/.env.production
+++ b/.env.production
@@ -1,15 +1,8 @@
-# Production Database Configuration
+# Production Database
 DATABASE_URL=postgresql://neondb_owner:npg_JCo94RyGTrlW@ep-misty-water-a10njxe6-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 
-# Google OAuth (set in Vercel if you have keys)
-NEXT_PUBLIC_GOOGLE_CLIENT_ID=
+# Session Security
+NEXTAUTH_SECRET=cmms-super-secret-key-production-2024-87c3d9f4e2b1a5c6
 
-# Email Service (optional - set in Vercel if needed)
-SMTP_USER=
-SMTP_PASSWORD=
-
-# Application Security (MUST set in Vercel dashboard)
-NEXTAUTH_SECRET=your-production-secret-key-here
-
-# Node Environment
+# Environment
 NODE_ENV=production
