--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,9 @@
 # Production Database
 DATABASE_URL=postgresql://neondb_owner:npg_JCo94RyGTrlW@ep-misty-water-a10njxe6-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 
+# Google OAuth
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=127633627490-7g0p9amvhd50nv767ub5i6s9ceb7i4nk.apps.googleusercontent.com
+
 # Session Security
 NEXTAUTH_SECRET=cmms-super-secret-key-production-2024-87c3d9f4e2b1a5c6
 
